# denuos

./: .gitignore  LICENSE-MIT  Makefile  README.md
doc/: Debugging.md  Specifications.md
src/arch/x86/: boot32.s  boot64.s  grub.cfg  link.ld  multiboot.s
src/kernel/: Cargo.toml  lib.rs  main.rs  vestige.rs  vga.rs
src/kernel/arch/: mod.rs
src/kernel/arch/x86/: boot64.s  frame_allocator.rs  interrupts.rs  intrinsics.rs  mod.rs  multiboot.rs  paging.rs  pic.rs  stacks.rs  syscall.rs  tss.rs
src/kernel/arch/x86/boot/: boot32.s  boot64.s  link.ld
src/kernel/arch/x86/gdt/: mod.rs
src/kernel/drivers/: pci.rs
src/kernel/mem/kalloc/: Cargo.toml  lib.rs
