[package]
name = "kernel"
version = "0.1.0"
authors = ["Jason Priest <jpriest@mit.edu>"]

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
rlibc = "1.0.0"
spin = "0.4.3"
bitflags = "0.7"

kalloc = { path = "mem/kalloc/" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
